<resources>
    <string name="app_name">TakeOff Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date">release date</string>
    <string name="movie_overview">movie overview</string>
    <string name="popular_movies_txt">Popular Movies</string>
    <string name="popular_movie_desc">Current Popular Movies</string>
    <string name="now_playing_movie_txt">Now Playing Movies</string>
    <string name="currently_playing">Currently playing</string>
    <string name="tv_rating">Rating :</string>
    <string name="rating">Rating</string>
    <string name="tv_login">Login</string>
    <string name="enter_username">Name</string>
    <string name="enter_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="tv_create_new_account">Welcome!</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Repeat Password</string>
    <string name="btn_create_account">Register</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="upcoming_movies_txt">Upcoming Movies</string>
    <string name="movies_you_might_like">Movies you might like</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="hi">Hi,</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="log_out">log out</string>
    <string name="error_getting_movies">error getting movies</string>
    <string name="press_back_again">Press back again to close app</string>
    <string name="error_getting_data">Error while getting data</string>
    <string name="username_is_empty">Username is empty!</string>
    <string name="password_is_empty">Password is empty!</string>
    <string name="username_or_password_incorrect">Username or password incorrect!</string>
    <string name="account_updated">Account Updated!</string>
    <string name="fail_update_account">Update Account Failed!</string>
    <string name="email_is_empty">Email is empty!</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="password_mismatch">Check again, password mismatch!</string>
    <string name="account_created">Account Created!</string>
    <string name="tv_edit_account">Edit Account Info</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="let_s_help_you_meet_up_your_destination">let\'s help you meet up your destination</string>
    <string name="do_you_want_to_exit_app">Do you want to exit app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="submit">Submit</string>
    <string name="hi_text">Hi ,</string>
    <string name="user">User</string>
    <string name="from_buyer">From</string>
    <string name="take_off">Take Off</string>
    <string name="sub">SUB</string>
    <string name="surabaya">Surabaya</string>
    <string name="aan">AAN</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="to">To</string>
    <string name="book_now">Book Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_id">User Id</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="flight_id">Flight ID</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="desc">Desc</string>
    <string name="titikdua">:</string>
    <string name="date">Date</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="date_created">Date Created</string>
    <string name="date_updated">Date Updated</string>
    <string name="edit_ticket_info">Edit Ticket Info</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="ticket">Ticket</string>
    <string name="create_ticket">Create Ticket</string>
</resources>