<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E1E1"
    android:orientation="vertical"
    tools:context="com.ace.c11flight.ui.view.ExitActivity">

    <LinearLayout
        android:id="@+id/ly_exit"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/rectangle_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_exit_app"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/btnExit_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:background="@drawable/rounded"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnExit_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginStart="30dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>