<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"

        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:id="@+id/tvFlightIdHl"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/flight_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTypeHl"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFlightIdHl" />

            <TextView
                android:id="@+id/tvPriceHl"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTypeHl" />

            <TextView
                android:id="@+id/tvDescHl"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceHl" />

            <TextView
                android:id="@+id/textView2"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/titikdua"
                app:layout_constraintStart_toEndOf="@+id/tvFlightIdHl"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/titikdua"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/titikdua"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                style="@style/ColoredHeadline"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/titikdua"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvFlightId"
                style="@style/Desc"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="4dp"
                android:text="@string/flight_id"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/tvFlightIdHl" />

            <TextView
                android:id="@+id/tvType"
                style="@style/Desc"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="4dp"
                android:text="@string/type"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/tvFlightId" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/Desc"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="4dp"
                android:text="@string/price"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/tvType" />

            <TextView
                android:id="@+id/tvDesc"
                style="@style/Desc"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="4dp"
                android:text="@string/desc"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <TextView
                android:id="@+id/tvDateUpdated"
                style="@style/Desc"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="4dp"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>